Refactor: remove inline CSS styles that conflict with style.css - cleanup typography, spacing, borders

--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
 
     <!-- header -->
     <header class="bg-dark text-light">
-        <div class="container-fluid text-center text-light py-1 mt-1" style="background-color: rgba(0, 0, 0, 0.655);">
+        <div class="container-fluid text-center text-light py-1 mt-1">
             <div class="row align-items-center justify-content-center g-3">
                 <div class="col-12 col-md-6 order-md-1 d-flex flex-column align-items-center">
                     <img src="assets/img/logo.png" alt="Enauto Coffee Logo"
                         class="shadow-lg rounded-circle mt-lg-3 py-3 mb-3 logo-img">
                     <h1 class="my-2 display-1 fw-bold header-title">Enauto Coffe</h1>
-                    <p class="fs-4 mb-0" style="font-size: clamp(0.9rem, 2vw, 1.25rem);">Coffe Shop Terbaik di Indonesia
+                    <p class="fs-4 mb-0">Coffe Shop Terbaik di Indonesia
                     </p>
                 </div>
                 <div
@@ -86,8 +86,8 @@
                         <h2 class="product-section-title display-1 mb-0">About Us</h2>
                     </div>
                     <!-- Paragraph -->
-                    <div class="col-12 text-center mb-2  mx-auto" style="max-width: 1000px;">
-                        <p class="lead" style="font-size: clamp(0.9rem, 2vw, 1.1rem);">Enauto Coffe adalah Coffe
+                    <div class="col-12 text-center mb-2  mx-auto">
+                        <p class="lead">Enauto Coffe adalah Coffe
                             Shop
                             terbaik di Indonesia yang menyediakan berbagai macam kopi berkualitas tinggi dengan cita
                             rasa yang nikmat dan pelayanan yang ramah. Sejak berdiri pada tahun 2015, kami telah
@@ -111,11 +111,10 @@
                         <div class="row g-2 g-md-3 mb-3 mb-md-5 px-3 px-md-0 about-cards-wrapper">
                             <div class="col-12 col-md-6">
                                 <div class="product-card p-2 p-md-3 text-center bg-dark text-light shadow-lg rounded">
-                                    <i class="fas fa-seedling mb-2 mb-md-2"
-                                        style="font-size: clamp(1.2rem, 2vw, 2rem);"></i>
-                                    <h3 class="mb-1" style="font-size: clamp(0.9rem, 1.8vw, 1.2rem);">Quality Beans
+                                    <i class="fas fa-seedling mb-2 mb-md-2"></i>
+                                    <h3 class="mb-1">Quality Beans
                                     </h3>
-                                    <p style="font-size: clamp(0.75rem, 1.2vw, 0.9rem); margin-bottom: 0;">Kami
+                                    <p>Kami
                                         hanya
                                         menggunakan
                                         biji kopi terbaik dari petani terpercaya.</p>
@@ -123,11 +122,10 @@
                             </div>
                             <div class="col-12 col-md-6">
                                 <div class="product-card p-2 p-md-3 text-center bg-dark text-light shadow-lg rounded">
-                                    <i class="fas fa-users mb-2 mb-md-2"
-                                        style="font-size: clamp(1.2rem, 2vw, 2rem);"></i>
-                                    <h3 class="mb-1" style="font-size: clamp(0.9rem, 1.8vw, 1.2rem);">Experienced
+                                    <i class="fas fa-users mb-2 mb-md-2"></i>
+                                    <h3 class="mb-1">Experienced
                                         Baristas</h3>
-                                    <p style="font-size: clamp(0.75rem, 1.2vw, 0.9rem); margin-bottom: 0;">Tim
+                                    <p>Tim
                                         barista
                                         kami
                                         berpengalaman lebih dari 10 tahun dalam menyeduh kopi.
@@ -142,12 +140,11 @@
 
         <!--Features section  -->
         <section id="features" class="product-section">
-            <div class="container-fluid px-3 px-md-5 pt-0 mt-0 align-content-center justify-content-center text-light"
-                style="background-color: rgba(0, 0, 0, 0.655);">
+            <div class="container-fluid px-3 px-md-5 pt-0 mt-0 align-content-center justify-content-center text-light">
                 <div class="row">
                     <div class="col-12 text-center py-3 py-md-5">
                         <h2 class="product-section-title display-1 mb-0 py-3 py-md-5">Our Features</h2>
-                        <p class="lead" style="font-size: clamp(0.9rem, 2vw, 1.1rem);">Temukan fitur-fitur unik yang
+                        <p class="lead">Temukan fitur-fitur unik yang
                             membedakan Enauto Coffe dari yang lain. Dari
                             perpaduan kopi kami yang ahli hingga suasana nyaman, kami menawarkan pengalaman kopi yang
                             tak tertandingi. Nikmati WiFi gratis, tempat duduk yang nyaman, dan berbagai pastry lezat
@@ -158,32 +155,26 @@
                     <div class="col-12 bg-transparent rounded-3 shadow-lg  pt-2 pt-md-3 py-3 py-md-5">
                         <div class="row g-2 g-md-4 mb-3 mb-md-5  px-3 px-md-0">
                             <div class="col-12 col-md-6 col-lg-4">
-                                <div class="product-card p-3 p-md-4 text-center bg-dark text-light shadow-lg rounded"
-                                    style="border-top: 2px solid; border-right: 2px solid;">
-                                    <i class="fas fa-wifi fa-2x fa-md-3x mb-2 mb-md-3"
-                                        style="font-size: clamp(1.5rem, 3vw, 3rem);"></i>
-                                    <h3 class="mb-2" style="font-size: clamp(1rem, 2vw, 1.5rem);">Free WiFi</h3>
-                                    <p style="font-size: clamp(0.85rem, 1.5vw, 1rem);">Nikmati koneksi internet cepat
+                                <div class="product-card p-3 p-md-4 text-center bg-dark text-light shadow-lg rounded">
+                                    <i class="fas fa-wifi fa-2x fa-md-3x mb-2 mb-md-3"></i>
+                                    <h3 class="mb-2">Free WiFi</h3>
+                                    <p>Nikmati koneksi internet cepat
                                         dan gratis di setiap sudut kedai kami.</p>
                                 </div>
                             </div>
                             <div class="col-12 col-md-6 col-lg-4">
-                                <div class="product-card p-3 p-md-4 text-center bg-dark text-light shadow-lg rounded"
-                                    style="border-top: 2px solid; border-right: 2px solid;">
-                                    <i class="fas fa-coffee fa-2x fa-md-3x mb-2 mb-md-3"
-                                        style="font-size: clamp(1.5rem, 3vw, 3rem);"></i>
-                                    <h3 class="mb-2" style="font-size: clamp(1rem, 2vw, 1.5rem);">Premium Coffee</h3>
-                                    <p style="font-size: clamp(0.85rem, 1.5vw, 1rem);">Rasakan cita rasa kopi terbaik
+                                <div class="product-card p-3 p-md-4 text-center bg-dark text-light shadow-lg rounded">
+                                    <i class="fas fa-coffee fa-2x fa-md-3x mb-2 mb-md-3"></i>
+                                    <h3 class="mb-2">Premium Coffee</h3>
+                                    <p>Rasakan cita rasa kopi terbaik
                                         yang diseduh dari biji kopi pilihan.</p>
                                 </div>
                             </div>
                             <div class="col-12 col-md-6 col-lg-4">
-                                <div class="product-card p-3 p-md-4 text-center bg-dark text-light shadow-lg rounded"
-                                    style="border-top: 2px solid; border-right: 2px solid;">
-                                    <i class="fas fa-mug-hot fa-2x fa-md-3x mb-2 mb-md-3"
-                                        style="font-size: clamp(1.5rem, 3vw, 3rem);"></i>
-                                    <h3 class="mb-2" style="font-size: clamp(1rem, 2vw, 1.5rem);">Cozy Atmosphere</h3>
-                                    <p style="font-size: clamp(0.85rem, 1.5vw, 1rem);">Rasakan suasana nyaman yang
+                                <div class="product-card p-3 p-md-4 text-center bg-dark text-light shadow-lg rounded">
+                                    <i class="fas fa-mug-hot fa-2x fa-md-3x mb-2 mb-md-3"></i>
+                                    <h3 class="mb-2">Cozy Atmosphere</h3>
+                                    <p>Rasakan suasana nyaman yang
                                         membuat Anda betah berlama-lama di kedai kami.</p>
                                 </div>
                             </div>
@@ -316,7 +307,7 @@
                     </div>
                     <div class="col-12 col-lg-6 ">
                         <div class="text-light text-center fw-semibold shadow-lg rounded p-3 p-md-4">
-                            <h1 style="font-size: clamp(1.2rem, 3vw, 1.8rem);">Message</h1>
+                            <h1>Message</h1>
                             <form class="py-3 py-md-5">
                                 <div class="row g-2 g-md-3">
                                     <div class="col-12 col-md-6">
@@ -343,17 +334,16 @@
                                         rows="4" required></textarea>
 
                                 </div>
-                                <button type="submit" class="btn btn-warning fw-bold w-100"
-                                    style="font-size: clamp(0.9rem, 2vw, 1rem);">Send Message</button>
+                                <button type="submit" class="btn btn-warning fw-bold w-100">Send Message</button>
                             </form>
                         </div>
                     </div>
                     <div class="col-12 col-lg-6">
                         <div class="text-light text-center fw-semibold shadow-lg rounded p-3 p-md-4">
-                            <h1 style="font-size: clamp(1.2rem, 3vw, 1.8rem);">Location</h1>
+                            <h1>Location</h1>
                             <iframe class="shadow-lg rounded-5 mt-3 mt-md-4 w-100"
                                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3960.822149047318!2d110.40615!3d-7.797068!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7a57fb5c5c5c5d%3A0x5c5c5c5c5c5c5c5c!2sEnauto%20Coffe!5e0!3m2!1sen!2sid!4v1234567890"
-                                style="width: 100%; border: 0; display: block;" allowfullscreen="" loading="lazy"
+                                allowfullscreen="" loading="lazy"
                                 referrerpolicy="no-referrer-when-downgrade"></iframe>
                         </div>
                     </div>
@@ -369,14 +359,14 @@
         <div class="container-fluid text-center p-3 p-md-4 bg-dark text-light">
             <div class="row align-items-center justify-content-center g-2 g-md-3">
                 <div class="col-12 col-md-auto">
-                    <p class="mb-0" style="font-size: clamp(0.85rem, 1.5vw, 0.95rem);">&copy; 2024 Enauto Coffe. All
+                    <p class="mb-0">&copy; 2024 Enauto Coffe. All
                         rights reserved.</p>
                 </div>
                 <div class="col-12 col-md-auto">
-                    <span style="font-size: clamp(0.85rem, 1.5vw, 0.95rem);">•</span>
+                    <span>•</span>
                 </div>
                 <div class="col-12 col-md-auto">
-                    <p class="mb-0" style="font-size: clamp(0.85rem, 1.5vw, 0.95rem);"><a href="#"
+                    <p class="mb-0"><a href="#"
                             class="text-light text-decoration-none fw-semibold hover-link">Design by Devp_Rick11</a></p>
                 </div>
             </div>
