chore: push latest changes

--- a/index.html
+++ b/index.html
@@ -343,8 +343,7 @@
                             <h1>Location</h1>
                             <iframe class="shadow-lg rounded-5 mt-3 mt-md-4 w-100"
                                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3960.822149047318!2d110.40615!3d-7.797068!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7a57fb5c5c5c5d%3A0x5c5c5c5c5c5c5c5c!2sEnauto%20Coffe!5e0!3m2!1sen!2sid!4v1234567890"
-                                allowfullscreen="" loading="lazy"
-                                referrerpolicy="no-referrer-when-downgrade"></iframe>
+                                allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                         </div>
                     </div>
                 </div>
@@ -366,8 +365,8 @@
                     <span>•</span>
                 </div>
                 <div class="col-12 col-md-auto">
-                    <p class="mb-0"><a href="#"
-                            class="text-light text-decoration-none fw-semibold hover-link">Design by Devp_Rick11</a></p>
+                    <p class="mb-0"><a href="#" class="text-light text-decoration-none fw-semibold hover-link">Design by
+                            Devp_Rick11</a></p>
                 </div>
             </div>
         </div>
