--- a/index.html
+++ b/index.html
@@ -56,19 +56,24 @@
                 <div class="collapse navbar-collapse justify-content-center mt-3" id="navbarNav">
                     <ul class="navbar-nav fs-5 fw-semibold gap-2 gap-lg-3">
                         <li class="nav-item">
-                            <a class="nav-link btn btn-dark px-3 px-lg-4 active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link btn btn-dark px-3 px-lg-4 active" aria-current="page" href="#"><i
+                                    class="fas fa-home me-2"></i>Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link btn btn-dark px-3 px-lg-4" href="#about">About</a>
+                            <a class="nav-link btn btn-dark px-3 px-lg-4" href="#about"><i
+                                    class="fas fa-info-circle me-2"></i>About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link btn btn-dark px-3 px-lg-4" href="#features">Features</a>
+                            <a class="nav-link btn btn-dark px-3 px-lg-4" href="#features"><i
+                                    class="fas fa-star me-2"></i>Features</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link btn btn-dark px-3 px-lg-4" href="#pricing">Pricing</a>
+                            <a class="nav-link btn btn-dark px-3 px-lg-4" href="#pricing"><i
+                                    class="fas fa-tags me-2"></i>Pricing</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link btn btn-dark px-3 px-lg-4" href="#contact">Contact</a>
+                            <a class="nav-link btn btn-dark px-3 px-lg-4" href="#contact"><i
+                                    class="fas fa-envelope me-2"></i>Contact</a>
                         </li>
                     </ul>
                 </div>
@@ -81,15 +86,11 @@
     <!-- main -->
     <main>
         <!-- About section -->
-        <section id="about">
-            <div class="container-fluid px-3 px-md-5 pt-0 mt-0 align-content-start justify-content-center text-light">
-                <div class="row w-100">
-                    <!-- Title -->
+        <section id="about" class="product-section">
+            <div class="container-fluid px-3 px-md-5 pt-0 mt-0 align-content-center justify-content-center text-light">
+                <div class="row">
                     <div class="col-12 text-center py-3 py-md-5">
-                        <h2 class="product-section-title display-1 mb-0">About Us</h2>
-                    </div>
-                    <!-- Paragraph -->
-                    <div class="col-12 text-center mb-2  mx-auto">
+                        <h2 class="product-section-title display-1 mb-0 py-3 py-md-5">About Us</h2>
                         <p class="lead">Enauto Coffe adalah Coffe
                             Shop
                             terbaik di Indonesia yang menyediakan berbagai macam kopi berkualitas tinggi dengan cita
@@ -108,35 +109,29 @@
                             kepuasan pelanggan. Terima kasih telah mempercayai Enauto Coffe sebagai pilihan kedai
                             kopi Anda.</p>
                     </div>
-
-                    <!-- Cards -->
-                    <div class="col-12 d-flex justify-content-center mb-4 mb-md-5">
-                        <div class="row g-2 g-md-3 mb-3 mb-md-5 px-3 px-md-0 about-cards-wrapper">
-                            <div class="col-12 col-md-6">
-                                <div class="product-card p-2 p-md-3 text-center bg-dark text-light shadow-lg rounded">
-                                    <i class="fas fa-seedling mb-2 mb-md-2"></i>
-                                    <h3 class="mb-1">Quality Beans
-                                    </h3>
-                                    <p>Kami
-                                        hanya
-                                        menggunakan
-                                        biji kopi terbaik dari petani terpercaya.</p>
+                    <div class="container">
+                        <div class="row py-2 py-md-3 g-2 g-md-4 mb-3 mb-md-5 px-3 px-md-0">
+                            <div class="col d-flex justify-content-center">
+                                <div
+                                    class="product-card p-3 p-md-4 text-center bg-dark text-light shadow-lg rounded mx-auto mb-4">
+                                    <i class="fas fa-seedling fa-2x fa-md-3x mb-2 mb-md-3"></i>
+                                    <h3 class="mb-2">Quality Beans</h3>
+                                    <p>Kami hanya menggunakan biji kopi terbaik yang dipilih langsung dari petani
+                                        terpercaya.</p>
                                 </div>
                             </div>
-                            <div class="col-12 col-md-6">
-                                <div class="product-card p-2 p-md-3 text-center bg-dark text-light shadow-lg rounded">
-                                    <i class="fas fa-users mb-2 mb-md-2"></i>
-                                    <h3 class="mb-1">Experienced
-                                        Baristas</h3>
-                                    <p>Tim
-                                        barista
-                                        kami
-                                        berpengalaman lebih dari 10 tahun dalam menyeduh kopi.
-                                    </p>
+                            <div class="col d-flex justify-content-center">
+                                <div
+                                    class="product-card p-3 p-md-4 text-center bg-dark text-light shadow-lg rounded mx-auto mb-4">
+                                    <i class="fas fa-users fa-2x fa-md-3x mb-2 mb-md-3"></i>
+                                    <h3 class="mb-2">Experience Baristas</h3>
+                                    <p>Tim Barista kami terlatih dan berpengalaman lebih dari 10 tahun dalam menyajikan
+                                        kopi terbaik.</p>
                                 </div>
                             </div>
                         </div>
                     </div>
+
                 </div>
             </div>
         </section>
@@ -155,9 +150,9 @@
                             yang luar biasa, memastikan setiap kunjungan berkesan. Apakah Anda di sini untuk bekerja,
                             bersantai, atau bersosialisasi, Enauto Coffe memiliki sesuatu untuk semua orang.</p>
                     </div>
-                    <div class="col-12 bg-transparent rounded-3 shadow-lg  pt-2 pt-md-3 py-3 py-md-5">
-                        <div class="row g-2 g-md-4 mb-3 mb-md-5  px-3 px-md-0">
-                            <div class="col-12 col-md-6 col-lg-4">
+                    <div class="col-12 bg-transparent rounded-3 shadow-lg pt-2 pt-md-3 py-3 py-md-5">
+                        <div class="row g-2 g-md-4 mb-3 mb-md-5 px-3 px-md-0">
+                            <div class="col-12 col-md-6">
                                 <div class="product-card p-3 p-md-4 text-center bg-dark text-light shadow-lg rounded">
                                     <i class="fas fa-wifi fa-2x fa-md-3x mb-2 mb-md-3"></i>
                                     <h3 class="mb-2">Free WiFi</h3>
@@ -165,7 +160,7 @@
                                         dan gratis di setiap sudut kedai kami.</p>
                                 </div>
                             </div>
-                            <div class="col-12 col-md-6 col-lg-4">
+                            <div class="col-12 col-md-6">
                                 <div class="product-card p-3 p-md-4 text-center bg-dark text-light shadow-lg rounded">
                                     <i class="fas fa-coffee fa-2x fa-md-3x mb-2 mb-md-3"></i>
                                     <h3 class="mb-2">Premium Coffee</h3>
@@ -173,17 +168,17 @@
                                         yang diseduh dari biji kopi pilihan.</p>
                                 </div>
                             </div>
-                            <div class="col-12 col-md-6 col-lg-4">
-                                <div class="product-card p-3 p-md-4 text-center bg-dark text-light shadow-lg rounded">
-                                    <i class="fas fa-mug-hot fa-2x fa-md-3x mb-2 mb-md-3"></i>
-                                    <h3 class="mb-2">Cozy Atmosphere</h3>
-                                    <p>Rasakan suasana nyaman yang
-                                        membuat Anda betah berlama-lama di kedai kami.</p>
-                                </div>
+                            <div class="col-12 col-md-6"></div>
+                            <div class="product-card p-3 p-md-4 text-center bg-dark text-light shadow-lg rounded">
+                                <i class="fas fa-mug-hot fa-2x fa-md-3x mb-2 mb-md-3"></i>
+                                <h3 class="mb-2">Cozy Atmosphere</h3>
+                                <p>Rasakan suasana nyaman yang
+                                    membuat Anda betah berlama-lama di kedai kami.</p>
                             </div>
                         </div>
                     </div>
                 </div>
+            </div>
             </div>
         </section>
 
@@ -397,16 +392,27 @@
             <div class="modal-content bg-dark text-light">
                 <div class="modal-header border-0">
                     <h5 class="modal-title" id="loginModalLabel">Login</h5>
-                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
+                        aria-label="Close"></button>
                 </div>
                 <form id="loginForm" class="modal-body">
                     <div class="mb-3">
                         <label for="loginIdentifier" class="form-label">Email atau Username</label>
-                        <input type="text" class="form-control" id="loginIdentifier" name="login-identifier" required>
+                        <div class="input-group">
+                            <span class="input-group-text bg-secondary text-light"><i class="fas fa-user"></i></span>
+                            <input type="text" class="form-control" id="loginIdentifier" name="login-identifier"
+                                required>
+                        </div>
                     </div>
                     <div class="mb-3">
                         <label for="loginPassword" class="form-label">Password</label>
-                        <input type="password" class="form-control" id="loginPassword" name="login-password" required>
+                        <div class="input-group">
+                            <span class="input-group-text bg-secondary text-light"><i class="fas fa-lock"></i></span>
+                            <input type="password" class="form-control" id="loginPassword" name="login-password"
+                                required>
+                            <button class="btn btn-secondary btn-toggle-pwd" type="button" data-target="#loginPassword"
+                                aria-label="Toggle password"><i class="fas fa-eye"></i></button>
+                        </div>
                     </div>
                     <div class="d-flex gap-2 justify-content-end">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Batal</button>
@@ -422,24 +428,55 @@
             <div class="modal-content bg-dark text-light">
                 <div class="modal-header border-0">
                     <h5 class="modal-title" id="registerModalLabel">Register</h5>
-                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
+                        aria-label="Close"></button>
                 </div>
                 <form id="registerForm" class="modal-body">
                     <div class="mb-3">
                         <label for="registerName" class="form-label">Nama Lengkap</label>
-                        <input type="text" class="form-control" id="registerName" name="register-name" required>
+                        <div class="input-group">
+                            <span class="input-group-text bg-secondary text-light"><i
+                                    class="fas fa-user-circle"></i></span>
+                            <input type="text" class="form-control" id="registerName" name="register-name" required>
+                        </div>
                     </div>
                     <div class="mb-3">
                         <label for="registerEmail" class="form-label">Email</label>
-                        <input type="email" class="form-control" id="registerEmail" name="register-email" required>
+                        <div class="input-group">
+                            <span class="input-group-text bg-secondary text-light"><i
+                                    class="fas fa-envelope"></i></span>
+                            <input type="email" class="form-control" id="registerEmail" name="register-email" required>
+                        </div>
                     </div>
                     <div class="mb-3">
                         <label for="registerPassword" class="form-label">Password</label>
-                        <input type="password" class="form-control" id="registerPassword" name="register-password" required>
+                        <div class="input-group mb-1">
+                            <span class="input-group-text bg-secondary text-light"><i class="fas fa-lock"></i></span>
+                            <input type="password" class="form-control" id="registerPassword" name="register-password"
+                                required>
+                            <button class="btn btn-secondary btn-toggle-pwd" type="button"
+                                data-target="#registerPassword" aria-label="Toggle password"><i
+                                    class="fas fa-eye"></i></button>
+                        </div>
+                        <div class="mb-2">
+                            <div class="progress" style="height:6px;">
+                                <div id="pwStrengthBar" class="progress-bar bg-danger" role="progressbar"
+                                    style="width:0%" aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
+                            <small id="pwStrengthText" class="form-text text-muted">Kekuatan password: <span
+                                    class="fw-semibold">-</span></small>
+                        </div>
                     </div>
                     <div class="mb-3">
                         <label for="registerPassword2" class="form-label">Konfirmasi Password</label>
-                        <input type="password" class="form-control" id="registerPassword2" name="register-password2" required>
+                        <div class="input-group">
+                            <span class="input-group-text bg-secondary text-light"><i class="fas fa-lock"></i></span>
+                            <input type="password" class="form-control" id="registerPassword2" name="register-password2"
+                                required>
+                            <button class="btn btn-secondary btn-toggle-pwd" type="button"
+                                data-target="#registerPassword2" aria-label="Toggle password"><i
+                                    class="fas fa-eye"></i></button>
+                        </div>
                     </div>
                     <div class="d-flex gap-2 justify-content-end">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Batal</button>
