feat(design): enhance visual design with modern styling - gradients, shadows, smooth animations

--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
                                     class="fas fa-star me-2"></i>Features</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link btn btn-dark px-3 px-lg-4" href="#gallery"><i
+                                    class="fas fa-images me-2"></i>Gallery</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link btn btn-dark px-3 px-lg-4" href="#pricing"><i
                                     class="fas fa-tags me-2"></i>Pricing</a>
                         </li>
@@ -111,7 +115,7 @@
                     </div>
                     <div class="container">
                         <div class="row py-2 py-md-3 g-2 g-md-4 mb-3 mb-md-5 px-3 px-md-0">
-                            <div class="col d-flex justify-content-center">
+                            <div class="col d-flex justify-content-center mx-auto">
                                 <div
                                     class="product-card p-3 p-md-4 text-center bg-dark text-light shadow-lg rounded mx-auto mb-4">
                                     <i class="fas fa-seedling fa-2x fa-md-3x mb-2 mb-md-3"></i>
@@ -120,7 +124,7 @@
                                         terpercaya.</p>
                                 </div>
                             </div>
-                            <div class="col d-flex justify-content-center">
+                            <div class="col d-flex justify-content-center mx-auto">
                                 <div
                                     class="product-card p-3 p-md-4 text-center bg-dark text-light shadow-lg rounded mx-auto mb-4">
                                     <i class="fas fa-users fa-2x fa-md-3x mb-2 mb-md-3"></i>
@@ -182,6 +186,65 @@
             </div>
         </section>
 
+        <!-- Gallery section -->
+        <section id="gallery" class="product-section">
+            <div class="container-fluid px-3 px-md-5 pt-0 mt-0 align-content-center justify-content-center text-light">
+                <div class="row">
+                    <div class="col-12 text-center py-3 py-md-5">
+                        <h2 class="product-section-title display-1 mb-0 py-3 py-md-5">Gallery</h2>
+                        <p class="lead">Jelajahi galeri kami untuk melihat
+                            momen-momen istimewa di Enauto Coffe. Dari aroma kopi yang menggoda hingga suasana
+                            hangat kedai kami, setiap foto menceritakan kisah tentang pengalaman kopi yang tak
+                            terlupakan. Saksikan keindahan seni latte, senyum ramah barista kami, dan pelanggan
+                            yang menikmati waktu mereka bersama. Galeri ini adalah cerminan dari dedikasi kami
+                            untuk memberikan yang terbaik bagi setiap pengunjung. Selamat menikmati perjalanan
+                            visual melalui dunia Enauto Coffe!</p>
+                    </div>
+                    <div class="col-12">
+                        <div class="row g-2 g-md-4 mb-3 mb-md-5 px-3 px-md-0">
+                            <div class="col-12 col-md-4">
+                                <div class="product-card shadow-lg rounded overflow-hidden">
+                                    <img src="assets/img/product img/Americano.png" alt="Gallery Image 1"
+                                        class="img-fluid gallery-img">
+                                </div>
+                            </div>
+                            <div class="col-12 col-md-4">
+                                <div class="product-card shadow-lg rounded overflow-hidden">
+                                    <img src="assets/img/product img/Latte.png" alt="Gallery Image 2"
+                                        class="img-fluid gallery-img">
+                                </div>
+                            </div>
+                            <div class="col-12 col-md-4">
+                                <div class="product-card shadow-lg rounded overflow-hidden">
+                                    <img src="assets/img/product img/Cappuccino.png" alt="Gallery Image 3"
+                                        class="img-fluid gallery-img">
+                                </div>
+                            </div>
+                            <div class="col-12 col-md-4">
+                                <div class="product-card shadow-lg rounded overflow-hidden">
+                                    <img src="assets/img/product img/Espresso.png" alt="Gallery Image 1"
+                                        class="img-fluid gallery-img">
+                                </div>
+                            </div>
+
+                            <div class="col-12 col-md-4">
+                                <div class="product-card shadow-lg rounded overflow-hidden">
+                                    <img src="assets/img/product img/creme latte.png" alt="Gallery Image 3    "
+                                        class="img-fluid gallery-img">
+                                </div>
+                            </div>
+                            <div class="col-12 col-md-4">
+                                <div class="product-card shadow-lg rounded overflow-hidden">
+                                    <img src="assets/img/product img/coffe.png" alt="Gallery Image 1"
+                                        class="img-fluid gallery-img">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
 
         <!--Pricing section  -->
         <section id="pricing" class="product-section border-top border-bottom border-secondary">
