feat(order): add modern order table with responsive design and smooth interactions

--- a/index.html
+++ b/index.html
@@ -358,6 +358,120 @@
             </div>
         </section>
 
+        <!-- Pesanan Section -->
+        <section id="order" class="product-section">
+            <div class="container-fluid px-3 px-md-5 pt-0 mt-0 align-content-center justify-content-center text-light">
+                <div class="row">
+                    <div class="col-12 text-center py-3 py-md-5">
+                        <h2 class="product-section-title display-1 mb-0 py-3 py-md-5">Place Your Order</h2>
+                        <p class="lead">Pesan kopi favorit Anda
+                            dengan mudah melalui sistem pemesanan online kami. Pilih dari berbagai menu kopi
+                            berkualitas tinggi, tambahkan ke keranjang belanja Anda, dan selesaikan pembayaran
+                            dengan cepat dan aman. Kami menawarkan berbagai metode pembayaran untuk kenyamanan
+                            Anda. Setelah pesanan Anda diterima, tim kami akan segera menyiapkan kopi segar
+                            sesuai pesanan Anda. Nikmati kemudahan memesan kopi dari mana saja dan kapan saja
+                            dengan layanan pengantaran kami yang cepat dan handal. Pesan sekarang dan rasakan
+                            kenikmatan kopi Enauto Coffe di rumah atau kantor Anda!</p>
+                    </div>
+
+                    <div class="col-12">
+                        <div class="table-responsive">
+                            <table class="table table-dark table-hover order-table">
+                                <thead>
+                                    <tr class="border-bottom border-warning">
+                                        <th scope="col" class="text-warning fw-bold">No</th>
+                                        <th scope="col" class="text-warning fw-bold">Menu</th>
+                                        <th scope="col" class="text-warning fw-bold">Harga</th>
+                                        <th scope="col" class="text-warning fw-bold">Jumlah</th>
+                                        <th scope="col" class="text-warning fw-bold">Total</th>
+                                        <th scope="col" class="text-warning fw-bold">Aksi</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr class="align-middle border-bottom border-secondary">
+                                        <td class="fw-semibold">1</td>
+                                        <td>
+                                            <div class="d-flex align-items-center gap-2">
+                                                <img src="assets/img/product img/espresso.png" alt="Espresso" class="order-table-img rounded">
+                                                <span>Espresso</span>
+                                            </div>
+                                        </td>
+                                        <td class="fw-semibold">$2.50</td>
+                                        <td>
+                                            <input type="number" class="form-control form-control-sm quantity-input" value="2" min="1" max="99">
+                                        </td>
+                                        <td class="fw-bold text-warning">$5.00</td>
+                                        <td>
+                                            <button class="btn btn-sm btn-outline-danger" title="Hapus">
+                                                <i class="fas fa-trash"></i>
+                                            </button>
+                                        </td>
+                                    </tr>
+                                    <tr class="align-middle border-bottom border-secondary">
+                                        <td class="fw-semibold">2</td>
+                                        <td>
+                                            <div class="d-flex align-items-center gap-2">
+                                                <img src="assets/img/product img/cappuccino.png" alt="Cappuccino" class="order-table-img rounded">
+                                                <span>Cappuccino</span>
+                                            </div>
+                                        </td>
+                                        <td class="fw-semibold">$3.50</td>
+                                        <td>
+                                            <input type="number" class="form-control form-control-sm quantity-input" value="1" min="1" max="99">
+                                        </td>
+                                        <td class="fw-bold text-warning">$3.50</td>
+                                        <td>
+                                            <button class="btn btn-sm btn-outline-danger" title="Hapus">
+                                                <i class="fas fa-trash"></i>
+                                            </button>
+                                        </td>
+                                    </tr>
+                                    <tr class="align-middle border-bottom border-secondary">
+                                        <td class="fw-semibold">3</td>
+                                        <td>
+                                            <div class="d-flex align-items-center gap-2">
+                                                <img src="assets/img/product img/latte.png" alt="Latte" class="order-table-img rounded">
+                                                <span>Latte</span>
+                                            </div>
+                                        </td>
+                                        <td class="fw-semibold">$4.00</td>
+                                        <td>
+                                            <input type="number" class="form-control form-control-sm quantity-input" value="3" min="1" max="99">
+                                        </td>
+                                        <td class="fw-bold text-warning">$12.00</td>
+                                        <td>
+                                            <button class="btn btn-sm btn-outline-danger" title="Hapus">
+                                                <i class="fas fa-trash"></i>
+                                            </button>
+                                        </td>
+                                    </tr>
+                                    <tr class="border-top border-warning">
+                                        <td colspan="4" class="text-end fw-bold fs-5">TOTAL PESANAN:</td>
+                                        <td class="fw-bold fs-5 text-warning">$20.50</td>
+                                        <td></td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+
+                        <div class="row g-2 mt-4 mb-5">
+                            <div class="col-12 col-md-6">
+                                <button type="button" class="btn btn-outline-warning w-100 fw-bold py-2">
+                                    <i class="fas fa-plus me-2"></i>Tambah Pesanan
+                                </button>
+                            </div>
+                            <div class="col-12 col-md-6">
+                                <button type="button" class="btn btn-warning w-100 fw-bold py-2">
+                                    <i class="fas fa-shopping-cart me-2"></i>Checkout
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+
         <!--Contact section  -->
         <section id="contact" class="product-section">
             <div class="container-fluid border-3 px-3 px-md-5">
